Add dynamic form fields

--- a/sampleform.html
+++ b/sampleform.html
@@ -2,7 +2,7 @@
 <head>
   <title></title>
 
-  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
+  <link href="custom.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
