--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
-
-  <link href="bootstrap/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet" media="screen">
+  <link href="custom.css" rel="stylesheet" media="screen">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -30,34 +29,60 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12" style="text-align: center; margin-top: 15px">
+      <div class="col-lg-6" id="rightform" style="text-align: center; margin-top: 15px">
 
-        <form class="form-inline" role="form">
-
+        <div class="form-inline">
           <div class="form-group">
-            <label class="sr-only" for="website1">Website</label>
-            <input type="text" class="form-control" id="website1" placeholder="Website" style="width: 350px; text-align: center;">
+              <input type="text" class="form-control" id="website1" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
           <div class="form-group">
-            <label class="sr-only" for="timealotted">Time</label>
-            <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Time" style="width: 120px; text-align: center;">
+            <input type="text" class="form-control" id="time1" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
-          <div class = "btn btn-danger">
-            +
+        </div>
+
+        <div class="form-inline" style="margin-top: 20px;">
+          <button type="submit" class="btn btn-default btn-primary">Track</button>
+          <div class = "btn btn-danger" id="add"> + </div>
+        </div>
+
+      </div>
+      <div class="col-lg-6" style="text-align: center; margin-top: 15px">
+
+        <div class="form-inline">
+          <div class="form-group">
+              <input type="text" class="form-control" id="website1" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
-          <br>
+          <div class="form-group">
+            <input type="text" class="form-control" id="time1" placeholder="Time" style="width: 120px; text-align: center;">
+          </div>
+        </div>
 
-          <button type="submit" class="btn btn-default btn-primary" style="margin-top: 20px; width: 100px;">Track</button>
+        <div class="form-inline" style="margin-top: 20px;">
+          <button type="submit" class="btn btn-default btn-primary">Track</button>
+          <div class = "btn btn-danger" id="add"> + </div>
+        </div>
 
-        </form>
       </div>
     </div>
   </div> <!-- /container -->
 
-  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>
-    var webcounter = 0;
 
+    console.log("hi1");
+
+    $("#add").click(function() {
+      console.log("hi2");
+
+      var field = "<div class=\"form-inline\" style=\"margin-top: 20px;\"> <div class=\"form-group\"><input type=\"text\" class=\"form-control\"id=\"website1\" placeholder=\"Website\" style=\"width: 350px; text-align: center;\"></div><div class=\"form-group\"><input type=\"text\" class=\"form-control\" id=\"time1\" placeholder=\"Time\" style=\"width: 120px; text-align: center;\"></div></div>";
+
+      console.log("hi3");
+
+      $("#rightform div:first").append(field).fadeIn();
+
+      console.log("hi4");
+
+    });
 
   </script>
 </body>
