--- a/index.html
+++ b/index.html
@@ -29,36 +29,19 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6" id="rightform" style="text-align: center; margin-top: 15px">
+      <div class="col-lg-12" id="rightform" style="text-align: center; margin-top: 15px">
 
         <div class="form-inline">
           <div class="form-group">
-              <input type="text" class="form-control" id="website1" placeholder="Website" style="width: 350px; text-align: center;">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" id="time1" placeholder="Time" style="width: 120px; text-align: center;">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
 
         <div class="form-inline" style="margin-top: 20px;">
-          <button type="submit" class="btn btn-default btn-primary">Track</button>
-          <div class = "btn btn-danger" id="add"> + </div>
-        </div>
-
-      </div>
-      <div class="col-lg-6" style="text-align: center; margin-top: 15px">
-
-        <div class="form-inline">
-          <div class="form-group">
-              <input type="text" class="form-control" id="website1" placeholder="Website" style="width: 350px; text-align: center;">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="time1" placeholder="Time" style="width: 120px; text-align: center;">
-          </div>
-        </div>
-
-        <div class="form-inline" style="margin-top: 20px;">
-          <button type="submit" class="btn btn-default btn-primary">Track</button>
+          <button type="submit" class="btn btn-default btn-primary" id="submit">Track</button>
           <div class = "btn btn-danger" id="add"> + </div>
         </div>
 
@@ -66,24 +49,8 @@
     </div>
   </div> <!-- /container -->
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>
+  <script src="jquery-1.10.2.min.js"></script>
+  <script src="custom.js"></script>
 
-    console.log("hi1");
-
-    $("#add").click(function() {
-      console.log("hi2");
-
-      var field = "<div class=\"form-inline\" style=\"margin-top: 20px;\"> <div class=\"form-group\"><input type=\"text\" class=\"form-control\"id=\"website1\" placeholder=\"Website\" style=\"width: 350px; text-align: center;\"></div><div class=\"form-group\"><input type=\"text\" class=\"form-control\" id=\"time1\" placeholder=\"Time\" style=\"width: 120px; text-align: center;\"></div></div>";
-
-      console.log("hi3");
-
-      $("#rightform div:first").append(field).fadeIn();
-
-      console.log("hi4");
-
-    });
-
-  </script>
 </body>
 </html>
