--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
   <link href="custom.css" rel="stylesheet" media="screen">
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media
+  queries -->
   <!--[if lt IE 9]>
     <script src="../../assets/js/html5shiv.js"></script>
     <script src="../../assets/js/respond.min.js"></script>
@@ -25,27 +26,82 @@
     </div>
     <div class="row">
       <div class="col-lg-12" style="text-align: center;">
-        <h3> - Enter the sites you want to track - <h3>
+        <h3> - Enter 5<span style="font-size: 20px;">*</span> sites you want to track - <h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12" id="rightform" style="text-align: center; margin-top: 15px">
+      <div class="col-lg-12" id="rightform" style="text-align: center;
+      margin-top: 15px">
 
         <div class="form-inline">
-          <div class="form-group">
+          <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
-          <div class="form-group">
+          <div class="form-group time">
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
+        <br>
 
-        <div class="form-inline" style="margin-top: 20px;">
-          <button type="submit" class="btn btn-default btn-primary" id="submit">Track</button>
+        <div class="form-inline">
+          <div class="form-group website">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
+          </div>
+          <div class="form-group time">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
+          </div>
+        </div>
+        <br>
+
+        <div class="form-inline">
+          <div class="form-group website">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
+          </div>
+          <div class="form-group time">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
+          </div>
+        </div>
+        <br>
+
+        <div class="form-inline">
+          <div class="form-group website">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
+          </div>
+          <div class="form-group time">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
+          </div>
+        </div>
+        <br>
+
+        <div class="form-inline">
+          <div class="form-group website">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
+          </div>
+          <div class="form-group time">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
+          </div>
+        </div>
+        <br>
+
+        <div class="form-inline">
+          <button type="submit" class="btn btn-default btn-primary" id="submit" style="width: 120px;">Track</button>
           <div class = "btn btn-danger" id="add"> + </div>
         </div>
-
+        <br>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+      </div>
+      <div class="col-lg-4" style="border-top: 2px black solid; padding-top: 13px;">
+        *We've found that this tool is most effective when you block the 5
+        sites you use to procrastinate. You can still add more sites using
+        the red plus above.
+      </div>
+      <div class="col-lg-4">
+      </div>
+
     </div>
   </div> <!-- /container -->
 
