Work on add and remove functionality

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
           SiteTrak
       </div>
     </div>
+
     <div class="row">
-      <div class="col-lg-12" style="text-align: center;">
+      <div class="col-lg-12" style="text-align: center; margin-top: -20px;">
         <h3> - Enter 5<span style="font-size: 20px;">*</span> sites you want to track - <h3>
       </div>
     </div>
+
     <div class="row">
       <div class="col-lg-12" id="rightform" style="text-align: center;
-      margin-top: 15px">
+      margin-top: 5px">
 
-        <div class="form-inline">
+        <div class="form-inline" style="margin-bottom: 20px;">
           <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
@@ -41,9 +43,8 @@
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
-        <br>
 
-        <div class="form-inline">
+        <div class="form-inline" style="margin-bottom: 20px;">
           <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
@@ -51,9 +52,8 @@
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
-        <br>
 
-        <div class="form-inline">
+        <div class="form-inline" style="margin-bottom: 20px;">
           <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
@@ -61,9 +61,8 @@
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
-        <br>
 
-        <div class="form-inline">
+        <div class="form-inline" style="margin-bottom: 20px;">
           <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
@@ -71,9 +70,8 @@
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
-        <br>
 
-        <div class="form-inline">
+        <div class="form-inline finalformentry" style="margin-bottom: 20px;">
           <div class="form-group website">
               <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
           </div>
@@ -81,11 +79,16 @@
             <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
           </div>
         </div>
-        <br>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-lg-12" style="text-align: center;
+      margin-top: 5px">
         <div class="form-inline">
           <button type="submit" class="btn btn-default btn-primary" id="submit" style="width: 120px;">Track</button>
-          <div class = "btn btn-danger" id="add"> + </div>
+          <div class = "btn btn-success" id="add"> + </div>
+          <div class = "btn btn-danger" id="minus"> - </div>
         </div>
         <br>
       </div>
@@ -94,10 +97,10 @@
     <div class="row">
       <div class="col-lg-4">
       </div>
-      <div class="col-lg-4" style="border-top: 2px black solid; padding-top: 13px;">
-        *We've found that this tool is most effective when you block the 5
+      <div class="col-lg-4" style="border-top: 2px #FFA824 solid; padding-top: 13px; text-align: center; margin-bottom: 50px;">
+        *We've found that this tool is most effective when you block 5
         sites you use to procrastinate. You can still add more sites using
-        the red plus above.
+        the plus above.
       </div>
       <div class="col-lg-4">
       </div>
