--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>SiteTrack</title>
+  <title>SiteTrak</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
@@ -20,71 +20,35 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-lg-12" style="text-align: center; font-size: 64px;">
+      <div class="col-sm-12" style="text-align: center; font-size: 64px;">
           SiteTrak
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-12" style="text-align: center; margin-top: -20px;">
-        <h3> - Enter 5<span style="font-size: 20px;">*</span> sites you want to track - <h3>
+      <div class="col-sm-12" style="text-align: center; margin-top: -20px;">
+        <h3> - Enter 5 sites you want to track - <h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-12" id="rightform" style="text-align: center;
+      <div class="col-sm-12" id="rightform" style="text-align: center;
       margin-top: 5px">
 
-        <div class="form-inline" style="margin-bottom: 20px;">
+        <div class="form-inline" style="margin-bottom: 5px;">
           <div class="form-group website">
-              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
+              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 290px; height: 50px; text-align: center;">
           </div>
           <div class="form-group time">
-            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
-          </div>
-        </div>
-
-        <div class="form-inline" style="margin-bottom: 20px;">
-          <div class="form-group website">
-              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
-          </div>
-          <div class="form-group time">
-            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
-          </div>
-        </div>
-
-        <div class="form-inline" style="margin-bottom: 20px;">
-          <div class="form-group website">
-              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
-          </div>
-          <div class="form-group time">
-            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
-          </div>
-        </div>
-
-        <div class="form-inline" style="margin-bottom: 20px;">
-          <div class="form-group website">
-              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
-          </div>
-          <div class="form-group time">
-            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
-          </div>
-        </div>
-
-        <div class="form-inline finalformentry" style="margin-bottom: 20px;">
-          <div class="form-group website">
-              <input type="text" class="form-control" id="website0" placeholder="Website" style="width: 350px; text-align: center;">
-          </div>
-          <div class="form-group time">
-            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 120px; text-align: center;">
+            <input type="text" class="form-control" id="time0" placeholder="Time" style="width: 100px; height: 50px; text-align: center;">
           </div>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-12" style="text-align: center;
-      margin-top: 5px">
+      <div class="col-md-12" style="text-align: center;
+      margin-top: 20px">
         <div class="form-inline">
           <button type="submit" class="btn btn-default btn-primary" id="submit" style="width: 120px;">Track</button>
           <div class = "btn btn-success" id="add"> + </div>
@@ -95,14 +59,14 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-sm-4">
       </div>
-      <div class="col-lg-4" style="border-top: 2px #FFA824 solid; padding-top: 13px; text-align: center; margin-bottom: 50px;">
+      <div class="col-sm-4" style="border-top: 2px #FFA824 solid; padding-top: 13px; text-align: center; margin-bottom: 50px;">
         *We've found that this tool is most effective when you block 5
         sites you use to procrastinate. You can still add more sites using
         the plus above.
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
       </div>
 
     </div>
